[gd_scene load_steps=6 format=2]

[ext_resource path="res://ChelseaMarket-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://button.tres" type="Theme" id=2]
[ext_resource path="res://FinishScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0.85098, 0.764706, 0.188235, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="FinishScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 80.0
margin_top = 50.0
margin_right = 240.0
margin_bottom = 90.0
theme = SubResource( 2 )
text = "You finished!"
align = 1
valign = 1

[node name="Restart" type="Button" parent="."]
margin_left = 180.0
margin_top = 150.0
margin_right = 310.0
margin_bottom = 170.0
focus_neighbour_left = NodePath("../Exit")
focus_neighbour_right = NodePath("../Exit")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_hover = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.619608, 0.152941, 1 )
text = "Restart"
align = 2

[node name="Exit" type="Button" parent="."]
margin_left = 10.0
margin_top = 150.0
margin_right = 140.0
margin_bottom = 170.0
focus_neighbour_left = NodePath("../Restart")
focus_neighbour_right = NodePath("../Restart")
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_hover = Color( 0.85098, 0.764706, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.619608, 0.152941, 1 )
text = "Exit to main menu"
align = 0

[connection signal="mouse_entered" from="Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
